# raypyng

./: .env  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTE.md  HANDOFF_rawdata_stream.md  LICENSE  NOTES.md  README-orig.md  README.md  RayPy_utils.py  TODO.md  precommit_setup_instructions.md  pyproject.toml  requirements.txt  simulate.py  snippets.py  test.py  test_collections.py  test_untangle.py
RayPy/: RayPy.py  generate_ray_data.py
RayPyNG/: beamwaist.py  collections.py  config.py  errors.py  raypyng.py  rml.py  runner.py  simulate.py  untangle.py  xmltools.py
docs/: API.rst  Makefile  code_documentation.rst  conf.py  how_to.rst  how_to_guides.rst  index.rst  installation.rst  make.bat  prepare_example_assets.py  simulate.rst  troubleshooting.rst  tutorial.rst  tutorial_manipulate.rst  tutorial_rayui_api.rst  tutorial_recipes.rst  tutorial_simulations.rst
examples/: TrainingData_RAYUI_11.py  dipole.py  eval_permil.py  example_beamwaist.py  example_eval_noanalyze_and_analyze.py  example_eval_permil.py  example_inspect.py  example_rml.py  example_runner.py  example_simulation.py  example_simulation_Flux.py  example_simulation_RP.py  example_simulation_analyze.py  example_simulation_noanalyze.py  example_simulation_noanalyze_dependent.py  example_simulation_noanalyze_ml.py  example_simulation_noanalyze_save_space.py  example_simulation_noanalyze_undulator.py  example_simulation_noanalyze_waveFiles.py  example_simulation_permil.py  example_vls.py  example_waveHelper.py  run_all_examples.sh  simulation_analysis_by_RAY-UI.py  simulation_external_undulator_flux_table.py  simulation_multilayer_monochromator_efficiency.py  simulation_permil.py  simulation_raypyng.py  simulation_recipee_Flux.py  simulation_recipee_ResolvinPower.py  simulation_save_space.py  simulation_slope_errors.py  simulation_waveFiles.py  test.py
rml/: beamline.rml  dcm.rml
test_bug/: generate_ray_data.py  raypyng_recipe.py
tests/: Flux_vs_energy_simulation_high_1200.py  config.py  conftest.py  fwhm.py  sim.py  sim_dipole.py  test.md  test.py  test_0_analyze.py  test_1_NoAnalyze.py  test_2_comparison.py  test_analyze.py  test_attr.py  test_beamwaist.py  test_collections.py  test_dipole.py  test_eval_noanalyze_analyze.py  test_example00_windows_smoke.py  test_mp.py  test_mutable_config_properties.py  test_no_analyze.py  test_noanalyze.py  test_param_transform.py  test_rawdata_integration.py  test_raypyng_analysis_export_mismatch.py  test_run.py  test_runner_api.py  test_simulation.py  test_simulation_RP.py  test_simulation_class.py  test_simulation_noanalyze.py  test_waveHelper.py  test_windows_multiprocessing_smoke.py  test_xml.py  test_xtype.py
tools/: bootstrap.sh  bootstrap_windows.ps1  build_docs.sh  publish_pypi.sh  release.sh  (+1 more)
(+1202 files in other folders)
