[project]
name = "raypyng"
version = "0.0.17"
authors = [
  { name="Simone Vadilonga, Ruslan Ovsyannikov", email="simone.vadilonga@helmholtz-berlin.de" },
]
description = "Python interface for RAY-UI x-ray tracing program"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
            'numpy>=1.22.0',
            'psutil>=5.9.1',
            'schwimmbad>=0.3.0',
            'joblib>=1.1.0',
            'matplotlib>=3.5.1',
            'natsort>=8.2.0 '
]

[project.urls]
"Homepage" = "https://github.com/hz-b/raypyng/"
"Bug Tracker" = "https://github.com/hz-b/raypyng/issues"
"Documentation" = "https://raypyng.readthedocs.io"