[project]
name = "raypyng"
version = "1.4.2"

authors = [
  { name = "Simone Vadilonga, Ruslan Ovsyannikov, Sebastian Sachse", email = "simone.vadilonga@helmholtz-berlin.de" },
]
description = "Python interface for RAY-UI x-ray tracing program"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License"
]

dependencies = [
  "numpy>=1.22.0",
  "psutil>=5.9.1",
  "joblib>=1.1.0",
  "matplotlib>=3.5.1",
  "natsort>=8.2.0",
  "tqdm>=4.66.1",
  "pandas>=2.0.3",
  "srxraylib>=1.0.61"
]

[project.optional-dependencies]
rayx = [
  "rayx>=0.4.5",
  "graxpy>=0.4.4",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pre-commit>=3.0",
  "black>=24.3.0",
  "ruff>=0.3.5",
]
docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=1.0.0",
  "sphinx-autodoc-typehints>=1.0",
  "myst-parser>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
raypyng = ["*.csv"]  # or include other patterns if needed
